Sign in screen test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,30 @@
     <string name="last_name">Last Name</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="password">Password</string>
-    <string name="saluatation">Salutation</string>
+    <string name="salutation">Salutation</string>
     <string name="currency">Currency</string>
     <string name="phone">Phone number</string>
     <string name="sign_up">Sign up</string>
+
+
+    <!-- Error Messages -->
+    <string name="error_salutation_required">Salutation field is required</string>
+    <string name="error_first_name_required">First name field is required</string>
+    <string name="error_first_name_too_short">first name must be at least 3 characters</string>
+    <string name="error_first_name_too_long">first name must be at most 15 characters</string>
+    <string name="error_last_name_required">Last name field is required</string>
+    <string name="error_last_name_too_short">last name must be at least 3 characters</string>
+    <string name="error_last_name_too_long">last name must be at most 15 characters</string>
+    <string name="error_email_required">Email field is required</string>
+    <string name="error_incorrect_email_format">Incorrect email format</string>
+    <string name="error_phone_number_required">Phone number field is required</string>
+    <string name="error_password_required">Password field is required</string>
+    <string name="error_password_too_short">Password must be at least 8 characters</string>
+    <string name="error_confirm_password_required">Confirm password field is required</string>
+    <string name="error_confirmation_passwords_do_not_match_password">Confirmation password does\'t match password</string>
+    <string name="error_phone_code_required">choose a phone code</string>
+    <string name="error_currency_required">Currency field is required</string>
+    <string name="error_incorrect_phone_format">wrong phone format</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="do_not_have_an_account">Don\'t have an account?</string>
 </resources>
