--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="error_incorrect_phone_format">wrong phone format</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="do_not_have_an_account">Don\'t have an account?</string>
+    <string name="sing_up_successfully">Sing up successfully</string>
+    <string name="please_fix_the_errors_and_try_again">Please fix the errors and try again</string>
+    <string name="sing_in_successfully">Sing in successfully</string>
+    <string name="code">Code</string>
 </resources>
